--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         src="https://firebasestorage.googleapis.com/v0/b/signature-generator-400e2.appspot.com/o/MH_Logo.gif?alt=media&token=424d0795-8647-4d40-b350-ab00b4c7592e"
         alt="logoMH"
       />
-      <h1 id="userName">Yannick Ayassa </h1>
+      <h1 id="userName">Yannick Ayassa</h1>
       <hr class="separator" />
       <h2 id="userTitle">Technicien informatique / IT technician</h2>
       <hr class="separator" />
@@ -59,9 +59,15 @@
     <!-- Inputs-->
 
     <div id="inputs">
-
-      <label for='Name'>Nom</label>
-      <input type="text" id="name">
+      <input type="text" placeholder="Nom" id="name" />
+      <input type="text" placeholder="Titre" id="name" />
+      <input type="text" placeholder="Téléphone" id="name" />
+      <select id="adressList">
+        <option value="Audi">Audi</option>
+        <option value="BMW">BMW</option>
+        <option value="Mercedes">Mercedes</option>
+        <option value="Volvo">Volvo</option>
+      </select>
     </div>
   </body>
 </html>
