--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body>
-    <div style="display: flex; flex-direction: column; width: auto; align-items: center;" id="signature-body">
+  <body
+    style="
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    "
+  >
+  
+    <div style="width: 30%" id="signature-body">
       <img
         style="height: 5rem; width: 8rem"
         id="logoMH"
@@ -31,7 +40,7 @@
           style="margin: 2px; font-size: 12px; color: rgb(88, 86, 86)"
           id="phoneNumber"
         >
-          T: 514 866-6736 #436 / C: 438-506-2860
+          T: 514 866-6736 
         </p>
       </div>
       <div style="display: flex; align-items: center">
@@ -113,14 +122,14 @@
             h
         /></a>
       </div>
-    
-
+    </div>
+  
     <!-- Inputs-->
 
     <div id="inputs">
       <input type="text" placeholder="Nom" id="name" />
       <input type="text" placeholder="Titre" id="title" />
-      <input type="text" id="phone" name="fphone" value="T: 514 866-6736" /><br /><br />
+      <input type="text" id="phone" name="fphone" value="T: 514 866-6736 #456" />
       <select id="adressList">
         <option value="Studio">
           87 rue Prince,Bureau 310, Montréal,QC H3C 2M7
@@ -130,6 +139,7 @@
         </option>
       </select>
       <button
+        id='copyButton'
         style="
           margin-top: 10px;
           cursor: pointer;
@@ -137,9 +147,8 @@
           border-radius: 5rem;
         "
       >
-        Copier
+        Copier Signature
       </button>
     </div>
-  </div>
   </body>
 </html>
