--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       justify-content: center;
     "
   >
-  
-    <div style="width: 30%" id="signature-body">
+    <div id="signature-body">
       <img
         style="height: 5rem; width: 8rem"
         id="logoMH"
@@ -25,11 +24,11 @@
         alt="logoMH"
       />
       <h1 style="margin: 2px; font-size: 16px" id="userName">Yannick Ayassa</h1>
-      <hr style="margin: 2px; width: 100%" class="separator" />
+      <hr style="margin: 2px" class="separator" />
       <h2 style="margin: 2px; font-size: 14px" id="userTitle">
-        Technicien informatique / IT technician
+        Technicien informatique / IT technician 
       </h2>
-      <hr style="margin: 2px; width: 100%" class="separator" />
+      <hr style="margin: 2px" class="separator" />
       <div style="display: flex; align-items: center">
         <img
           height="13"
@@ -40,7 +39,7 @@
           style="margin: 2px; font-size: 12px; color: rgb(88, 86, 86)"
           id="phoneNumber"
         >
-          T: 514 866-6736 
+          T: 514 866-6736
         </p>
       </div>
       <div style="display: flex; align-items: center">
@@ -123,13 +122,18 @@
         /></a>
       </div>
     </div>
-  
+
     <!-- Inputs-->
 
     <div id="inputs">
       <input type="text" placeholder="Nom" id="name" />
       <input type="text" placeholder="Titre" id="title" />
-      <input type="text" id="phone" name="fphone" value="T: 514 866-6736 #456" />
+      <input
+        type="text"
+        id="phone"
+        name="fphone"
+        value="T: 514 866-6736 #456"
+      />
       <select id="adressList">
         <option value="Studio">
           87 rue Prince,Bureau 310, Montréal,QC H3C 2M7
@@ -139,7 +143,7 @@
         </option>
       </select>
       <button
-        id='copyButton'
+        id="copyButton"
         style="
           margin-top: 10px;
           cursor: pointer;
@@ -147,7 +151,7 @@
           border-radius: 5rem;
         "
       >
-        Copier Signature
+        Copier la signature
       </button>
     </div>
   </body>
